--- a/app/ElizaApp/app/src/main/AndroidManifest.xml
+++ b/app/ElizaApp/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name="ConnectActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name="DebugActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
