--- a/server/server/pom.xml
+++ b/server/server/pom.xml
@@ -15,5 +15,12 @@
         </configuration>
       </plugin>
     </plugins>
+    <dependencies>
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+        </dependency>  
+    </dependencies>
   </build>
 </project>
