--- a/server/server/pom.xml
+++ b/server/server/pom.xml
@@ -21,7 +21,13 @@
           <artifactId>junit</artifactId>
           <version>4.12</version>
         </dependency>
-          
+    	<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20170516</version>
+		</dependency>
+    	
     </dependencies>
   </build>
 </project>
