--- a/app/ElizaApp/app/src/main/AndroidManifest.xml
+++ b/app/ElizaApp/app/src/main/AndroidManifest.xml
@@ -12,19 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar" >
         <activity android:name=".MainActivity" >
+        </activity>
+        <activity
+            android:name="ConnectActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="ConnectActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name="DebugActivity"
-            android:label="@string/app_name">
+            android:name="DebugActivity" >
         </activity>
     </application>
 
