--- a/app/ElizaApp/app/src/main/AndroidManifest.xml
+++ b/app/ElizaApp/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:name=".ElizaApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="MOPED Controller"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar" >
