--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
   		<artifactId>junit</artifactId>
   		<version>3.8.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.bytedeco</groupId>
+  		<artifactId>javacv-platform</artifactId>
+  		<version>1.3.3</version>
+  	</dependency>
   </dependencies>
 </project>
