--- a/server/server/pom.xml
+++ b/server/server/pom.xml
@@ -15,8 +15,15 @@
         </configuration>
       </plugin>
     </plugins>
-    <dependencies>
-        <dependency>
+    
+  </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.bytedeco</groupId>
+  		<artifactId>javacv-platform</artifactId>
+  		<version>1.3.3</version>
+  	</dependency>
+  	<dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.12</version>
@@ -27,7 +34,5 @@
 		    <artifactId>json</artifactId>
 		    <version>20170516</version>
 		</dependency>
-    	
-    </dependencies>
-  </build>
+  </dependencies>
 </project>
