--- a/app/ElizaApp/app/build.gradle
+++ b/app/ElizaApp/app/build.gradle
@@ -29,3 +29,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
 }
+android {
+    // ...
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+}
