--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/olofenstrom/Downloads/opencvdir/opencv-3.3.0/build/bin/opencv-330.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/olofenstrom/Downloads/opencvdir/opencv-3.3.0/build/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
